fixed responsiveness of modals on small screens

--- a/frontend/src/styles/ProfilePage.css
+++ b/frontend/src/styles/ProfilePage.css
@@ -102,26 +102,22 @@
   border: 1px solid black;
   background-color: white;
   margin-right: 28px;
+  font-size: 14px;
+  line-height: 16px;
 }
 .delete-account-button {
   background: var(--secondary-red);
   border: 1px solid var(--secondary-red);
   color: white;
+  font-size: 14px;
+  line-height: 16px;
 }
 
 /* Modal styles */
-.profile-page-modal {
-  width: 400px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  padding-top: 40px;
-  background-color: white;
-  box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
-}
+
+/* Style reset to make modal container 
+ * flex (lets me center actual modal) 
+ */
 .profile-page-modal-overlay {
   display: flex;
   justify-content: center;
@@ -133,6 +129,19 @@
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.75);
 }
+.profile-page-modal {
+  max-width: 400px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  margin: 5px;
+}
+
 .profile-page-modal > h1 {
   font-family: Lato;
   font-style: normal;
@@ -140,7 +149,7 @@
   font-size: 18px;
   line-height: 22px;
   text-align: center;
-  margin-bottom: 30px;
+  margin: 30px 10px;
 
   color: black;
 }
@@ -168,6 +177,7 @@
 }
 .modal-button.small {
   width: 105px !important;
+  margin: 5px;
 }
 .button-primary {
   color: white;
@@ -178,15 +188,24 @@
 .button-secondary {
   border: 1px solid black;
   background: white;
+  font-size: 12px;
+  line-height: 14px;
 }
 .button-danger {
   color: white;
   background: var(--light-red);
   border: 1px solid var(--light-red);
+  font-size: 12px;
+  line-height: 14px;
 }
 .change-pass-form {
-  margin-top: 70px;
-  width: 300px;
+  max-width: 300px;
+  margin: 50px 30px 30px;
+}
+@media only screen and (max-width: 450px) {
+  .change-pass-form {
+    margin: 30px 10px 0px;
+  }
 }
 .change-pass-form > input {
   background: white;
@@ -198,13 +217,19 @@
   width: 100%;
   height: 28px;
   color: var(--blackish);
+  box-sizing: border-box;
 }
 .change-pass-form > .button-primary {
   margin-top: 70px;
+  box-sizing: border-box;
+  height: 28px;
+  font-size: 12px;
+  line-height: 14px;
 }
 .delete-button-container {
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
-  width: 300px;
-  margin-bottom: 30px;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
 }
